package vn.edu.giadinh.persistence;

import java.util.Date;

public class StudentDTO {
	public String id;
	public String name;
	public Date birthDate;
    public String major;
    public Double javaScore;
    public Double htmlScore;
    public Double cssScore;
    public Double marketingScore;
    public Double salesScore;

}